CSS Flexbox - Third commit

--- a/Responsive Web Design Principles/ex01-create-a-media-query.html
+++ b/Responsive Web Design Principles/ex01-create-a-media-query.html
@@ -1,3 +1,10 @@
+<!--
+  Media Queries are a new technique introduced in CSS3 that change the presentation of content based on different viewport sizes. The viewport is a user's visible area of a web page, and is different depending on the device used to access the site.
+  
+  Media Queries consist of a media type, and if that media type matches the type of device the document is displayed on, the styles are applied.
+-->
+
+
 <style>
   
 p {
