Applied Visual Design - Fourth commit

--- a/Applied Visual Design/ex11-add-a-box-shadow-to-a-card-like-element.html
+++ b/Applied Visual Design/ex11-add-a-box-shadow-to-a-card-like-element.html
@@ -28,6 +28,9 @@
   #thumbnail {
     box-shadow:  0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   }
+  /*
+  Box-shadow properties (in order): offset-x, offset-y, blur-radius (how fog the shadow is), spread-radius (how the shadow expands itself) and color. The last two (befose color) are optional. 
+  */
 </style>
 <div class="fullCard" id="thumbnail">
   <div class="cardContent">
