--- a/Applied Visual Design/ex30-adjust-the-tone-of-a-color.html
+++ b/Applied Visual Design/ex30-adjust-the-tone-of-a-color.html
@@ -1,4 +1,7 @@
 <style>
+  /*
+  This is useful when you have a base hue you like, but need different variations of it.
+  */
   header {
     background-color: hsl(180, 90%, 35%);
     color: #FFFFFF;
