--- a/Applied Visual Design/ex12-decrease-the-opacity-of-an-element.html
+++ b/Applied Visual Design/ex12-decrease-the-opacity-of-an-element.html
@@ -12,8 +12,10 @@
     text-align: left;
     color: black;
     opacity: 0.7;
-
   }
+  /*
+  Higher opacity provides higher visibility
+  */
   #thumbnail {
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   }
