--- a/Applied Visual Design/ex29-adjust-the-hue-of-a-color.html
+++ b/Applied Visual Design/ex29-adjust-the-hue-of-a-color.html
@@ -1,4 +1,8 @@
 <style>
+  /*
+  Colors have several characteristics including hue, saturation, and lightness. CSS3 introduced the hsl() property as an alternative way to pick a color by directly stating these characteristics.
+  */
+  
   body {
     background-color: #FFFFFF;
   }
