Tom Zé Tribute Page - Second commit

--- a/Responsive Web Design Projects/Tom Zé Tribute Page/index.html
+++ b/Responsive Web Design Projects/Tom Zé Tribute Page/index.html
@@ -12,16 +12,19 @@
         <h1 id="title">Tom Zé Tribute</h1>
         <h2>The Unkown Arm of Brazilian Tropicalism</h2>
         <div id="img-div">
-            <img src="" alt="">
+            <img src="tom-ze preto-branco(2).jpg" alt="" id="image">
+            <h3 id="img-caption">
+                Tom Zé, singer and composer. Always emblematic and with so much to say.
+            </h3>
+            
         </div>
-        <h2>Here's a time line of Dr. Tom Zé's life:</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos earum itaque aliquid dolorum explicabo quam voluptate repellat quas minus tempore, mollitia quo, deserunt accusamus dolorem veritatis molestiae quibusdam! Quisquam, a?</p>
-        <p>"quote Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod dicta eaque dolorem magni reiciendis odit facilis maxime totam facere sapiente optio perspiciatis doloribus, odio pariatur natus, impedit, cupiditate nulla eveniet."</p>
-        <p>If you have time, you should read more about this incredible human being on his <a href="https://pt.wikipedia.org/wiki/Tom_Z%C3%A9">Wikipedia entry.</a></p>
+        <h2 id="tribute-info-title">Here's a time line of Dr. Tom Zé's life:</h2>
+        <ul>
+            <li><strong>1936 -</strong> Born in Irará, Bahia - Brazil</li>
+            <li></li>
+        </ul>
+        <p>If you have time, you should read more about this incredible human being on his <a href="https://pt.wikipedia.org/wiki/Tom_Z%C3%A9" id="tribute-link">Wikipedia entry.</a></p>
     </div>
-
-
-
 
     <script src="script.js"></script>
     
