Tom Zé Tribute Page - Third commit

--- a/Responsive Web Design Projects/Tom Zé Tribute Page/index.html
+++ b/Responsive Web Design Projects/Tom Zé Tribute Page/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="main">
         <h1 id="title">Tom Zé Tribute</h1>
-        <h2>The Unkown Arm of Brazilian Tropicalism</h2>
+        <h2>The Last Tropicalian</h2>
         <div id="img-div">
             <img src="tom-ze preto-branco(2).jpg" alt="" id="image">
             <h3 id="img-caption">
@@ -21,7 +21,13 @@
         <h2 id="tribute-info-title">Here's a time line of Dr. Tom Zé's life:</h2>
         <ul>
             <li><strong>1936 -</strong> Born in Irará, Bahia - Brazil</li>
-            <li></li>
+            <li><strong>50's - </strong> </li>
+            <li><strong>Earl 60's - </strong> Start to study music in Bahia Music University, where later years later he would become a harmony professor.</li>
+            <li><strong> 1968 - </strong> Earn the fourth Brazilian Popular Music Festival with the song "São Paulo, meu amor". That was a turning point of his career. Also in this year, released his first album  Tom Zé - Grande Liquidação.</li>
+            <li><strong>1970 - </strong> Release of his second album "Tom Zé", one of the most acclaimed of his career.</li>
+            <li><strong> 1973 - </strong> Release of his third album "Todos os olhos". Probably the most controversial in his career, as it was censored by the totalitary brazilian's government because of the front cover.</li>
+            <li><strong> 1976 - </strong>> Release of his fourth album "Ensinando o Samba". Here, the most clear signal that he was taking the experimental music direction, which would be his career choice from this time on.</li>
+            <li><strong>Latest 80's - </strong> David Byrne (Talking Heads) in a trip to Brazil, discovers Tom Zé accidentally and get very impressed. This acossiation was a re-emergy for Tom Ze's career. He released a compilation and two albums, all of which received positive reviews from critics in the United States. </li>
         </ul>
         <p>If you have time, you should read more about this incredible human being on his <a href="https://pt.wikipedia.org/wiki/Tom_Z%C3%A9" id="tribute-link">Wikipedia entry.</a></p>
     </div>
