CSS Grid - Second commit

--- a/CSS Grid/ex08-use-grid-column-to-control-spacing.html
+++ b/CSS Grid/ex08-use-grid-column-to-control-spacing.html
@@ -6,11 +6,10 @@
 
   .item5 {
     background: PaleGreen;
-    /* Only change code below this line */
-
     grid-column: 2 / 4;
-
-    /* Only change code above this line */
+    /*
+    Here the the numbers indicates where the item starts and ends. This property applies to specify the space an item occupates inside a container
+    */
   }
 
   .container {
