--- a/CSS Grid/ex10-align-an-item-horizontally-using-justify-self.html
+++ b/CSS Grid/ex10-align-an-item-horizontally-using-justify-self.html
@@ -3,11 +3,10 @@
 
   .item2 {
     background: LightSalmon;
-    /* Only change code below this line */
-
     justify-self: center;
-    
-    /* Only change code above this line */
+    /*
+    By default the item fills all the space available. But when we use this property, it automatically shrinks
+    */
   }
 
   .item3{background:PaleTurquoise;}
