CSS Flexbox - Fourth commit

--- a/CSS Flexbox/ex17-use-the-align-self-property.html
+++ b/CSS Flexbox/ex17-use-the-align-self-property.html
@@ -1,7 +1,10 @@
 <style>
   #box-container {
+    background-color: aqua;
     display: flex;
     height: 500px;
+    width: 90vw;
+    justify-content: flex-end;
   }
   #box-1 {
     background-color: dodgerblue;
@@ -16,6 +19,9 @@
     height: 200px;
     width: 200px;
   }
+  /*
+  Align-self overides align items
+  */ 
 </style>
 
 <div id="box-container">
