Applied Accessibility - Second commit

--- a/Applied Accessibility/ex15-make-elements-only-visible-to-a-screen-reader-by-using-custom-css.html
+++ b/Applied Accessibility/ex15-make-elements-only-visible-to-a-screen-reader-by-using-custom-css.html
@@ -8,6 +8,9 @@
     top: auto;
     overflow: hidden;
   }
+  /*
+  We set -10000px to the left property so that it can't be visible for the users 
+  */
   </style>
 </head>
 <body>
@@ -24,7 +27,6 @@
   <section>
     <h2>Master Camper Cat's Beginner Three Week Training Program</h2>
     <figure>
-      <!-- Stacked bar chart of weekly training -->
       <p>[Stacked bar chart]</p>
       <br />
       <figcaption>Breakdown per week of time to spend training in stealth, combat, and weapons.</figcaption>
