Tom Zé Tribute Page - Fourth commit

--- a/Responsive Web Design Projects/Tom Zé Tribute Page/index.html
+++ b/Responsive Web Design Projects/Tom Zé Tribute Page/index.html
@@ -8,29 +8,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="main">
+    <main id="main">
         <h1 id="title">Tom Zé Tribute</h1>
-        <h2>The Last Tropicalian</h2>
-        <div id="img-div">
-            <img src="tom-ze preto-branco(2).jpg" alt="" id="image">
-            <h3 id="img-caption">
+        <p>The Last Tropicalian</p>
+        <figure id="img-div">
+            <img src="tom-ze-cantando.jpg" alt=" Tom Zé reflexive image." id="img">
+            <figcaption id="img-caption">
                 Tom Zé, singer and composer. Always emblematic and with so much to say.
-            </h3>
-            
-        </div>
+            </figcaption>
+        </figure>
+        <section id="tribute-info">
         <h2 id="tribute-info-title">Here's a time line of Dr. Tom Zé's life:</h2>
         <ul>
-            <li><strong>1936 -</strong> Born in Irará, Bahia - Brazil</li>
-            <li><strong>50's - </strong> </li>
-            <li><strong>Earl 60's - </strong> Start to study music in Bahia Music University, where later years later he would become a harmony professor.</li>
-            <li><strong> 1968 - </strong> Earn the fourth Brazilian Popular Music Festival with the song "São Paulo, meu amor". That was a turning point of his career. Also in this year, released his first album  Tom Zé - Grande Liquidação.</li>
+            <li><strong>1936 -</strong> Born in Irará, Bahia - Brazil. He was a very curious kid and little details of the world around him always messed with his head. </li>
+            <li><strong>50's - </strong>He used to love music since really woung, listening to brazilian great musicians like Luiz Gonzaga and Jackson do Pandeiro. A little harmonica was his first experience in the world of music, but discovering the acoustic guitar, when he was 17, would change his life forever.</li>
+            <li><strong>60's - </strong>Start to study music in Bahia Federal University University, where years later he would become a harmony professor.  At university, he was one of the founding members of the Bahia Composers Group, one of the reasons for his erudit root that would be a characteristic in his career. The acossiation in the past years with Caetano Veloso, Gilberto Gil, Gau Costa and many other important brazilian artists made them the seeds of what was going to be the brazilian tropilism. In 1968 he moved to São Paulo. In this year, he won the fourth Brazilian Popular Music Festival with the song "São Paulo, meu amor". Also in this year, released his first album:  Tom Zé - Grande Liquidação and participate in Tropicália – Panis et circensis, a really provocative album.What an year! A truly turning pont in his carrer.</li>
             <li><strong>1970 - </strong> Release of his second album "Tom Zé", one of the most acclaimed of his career.</li>
             <li><strong> 1973 - </strong> Release of his third album "Todos os olhos". Probably the most controversial in his career, as it was censored by the totalitary brazilian's government because of the front cover.</li>
-            <li><strong> 1976 - </strong>> Release of his fourth album "Ensinando o Samba". Here, the most clear signal that he was taking the experimental music direction, which would be his career choice from this time on.</li>
+            <li><strong> 1976 - </strong> Release of his fourth album "Ensinando o Samba". Here, the most clear signal that he was taking the experimental music direction, which would be his career choice from this time on.</li>
             <li><strong>Latest 80's - </strong> David Byrne (Talking Heads) in a trip to Brazil, discovers Tom Zé accidentally and get very impressed. This acossiation was a re-emergy for Tom Ze's career. He released a compilation and two albums, all of which received positive reviews from critics in the United States. </li>
         </ul>
-        <p>If you have time, you should read more about this incredible human being on his <a href="https://pt.wikipedia.org/wiki/Tom_Z%C3%A9" id="tribute-link">Wikipedia entry.</a></p>
-    </div>
+        <blockquote>
+            <p>
+                <em>"Pra viver mais ou menos bem numa grande cidade, precisa inicialmente de três coisas: gravatas, documentos e neuroses".</em>
+            </p>
+        </blockquote>
+        <h3>If you have time, you should read more about this incredible human being on his <a href="https://pt.wikipedia.org/wiki/Tom_Z%C3%A9" id="tribute-link">Wikipedia entry.</a></h3>
+    </section>
+    </main>
 
     <script src="script.js"></script>
     
