Tom Zé Tribute Page - Fifth commit

--- a/Responsive Web Design Projects/Tom Zé Tribute Page/index.html
+++ b/Responsive Web Design Projects/Tom Zé Tribute Page/index.html
@@ -11,29 +11,31 @@
     <main id="main">
         <h1 id="title">Tom Zé Tribute</h1>
         <p>The Last Tropicalian</p>
-        <figure id="img-div">
-            <img src="tom-ze-cantando.jpg" alt=" Tom Zé reflexive image." id="img">
+        <div id="img-div">
+            <img src="https://live.staticflickr.com/5697/30397228050_c99d0867e3_b.jpg" alt=" Tom Zé reflexive image." id="image">
             <figcaption id="img-caption">
                 Tom Zé, singer and composer. Always emblematic and with so much to say.
             </figcaption>
-        </figure>
+        </div>
         <section id="tribute-info">
         <h2 id="tribute-info-title">Here's a time line of Dr. Tom Zé's life:</h2>
         <ul>
             <li><strong>1936 -</strong> Born in Irará, Bahia - Brazil. He was a very curious kid and little details of the world around him always messed with his head. </li>
             <li><strong>50's - </strong>He used to love music since really woung, listening to brazilian great musicians like Luiz Gonzaga and Jackson do Pandeiro. A little harmonica was his first experience in the world of music, but discovering the acoustic guitar, when he was 17, would change his life forever.</li>
             <li><strong>60's - </strong>Start to study music in Bahia Federal University University, where years later he would become a harmony professor.  At university, he was one of the founding members of the Bahia Composers Group, one of the reasons for his erudit root that would be a characteristic in his career. The acossiation in the past years with Caetano Veloso, Gilberto Gil, Gau Costa and many other important brazilian artists made them the seeds of what was going to be the brazilian tropilism. In 1968 he moved to São Paulo. In this year, he won the fourth Brazilian Popular Music Festival with the song "São Paulo, meu amor". Also in this year, released his first album:  Tom Zé - Grande Liquidação and participate in Tropicália – Panis et circensis, a really provocative album.What an year! A truly turning pont in his carrer.</li>
-            <li><strong>1970 - </strong> Release of his second album "Tom Zé", one of the most acclaimed of his career.</li>
-            <li><strong> 1973 - </strong> Release of his third album "Todos os olhos". Probably the most controversial in his career, as it was censored by the totalitary brazilian's government because of the front cover.</li>
-            <li><strong> 1976 - </strong> Release of his fourth album "Ensinando o Samba". Here, the most clear signal that he was taking the experimental music direction, which would be his career choice from this time on.</li>
-            <li><strong>Latest 80's - </strong> David Byrne (Talking Heads) in a trip to Brazil, discovers Tom Zé accidentally and get very impressed. This acossiation was a re-emergy for Tom Ze's career. He released a compilation and two albums, all of which received positive reviews from critics in the United States. </li>
+            <li><strong>70's - </strong> Releases of gorgeous albums all decade long. From "Tom Zé" (1970 - one of the most acclaimed of his career) to "Correio da Estação do Brás" (1978), passing through "Todos os olhos" (1973) and "Estudando o Samba" (1976). The rupture with aesthetic standards of his music from that time made it hard for the radio stations to classificate his art. Thus, the passage of years caused him to be forgotten by the general audience. 
+            </li>
+            <li><strong>80's - </strong> In 1984, releases the album "Nave Maria". He experienced difficult days, as living on music was harder and harder every year. In some point he had to  sold his house and start dedicading to musical instrument construction, in which he was also good. 
+            <li><strong>90's - </strong> When Tom Zé was preparing to leave his musical career, due to the difficulty of survival, the musician David Byrne (Talking Heads), while in Rio de Janeiro, discovered the album "Estudando o samba" and, upon founding the Luaka Bop label in New York, had Tom Zé as your first hire. This acossiation was a re-emergy for Tom Ze's career. He released a compilation and two albums, all of which received positive reviews from critics in the United States. The CD "The best of Tom Zé" was listed, in its release, among the best records of the year 1990, by The New York Times. Parabelo (featuring José Miguel Wisnik, 1997) and Santagustin (featuring Gilberto Assis, 2001) came after with very good critics also and helped him to establish his turn around. </li>
+            <li><strong>00's - </strong> The release of "Jogos de Amar" (2000) brought both the first release of a brazilian record in 20 years and the first appearence of Zé's experiemntal own buit instruments. Moving on we have: "Imprensa cantada"(2003), Estudando o Pagode(2005). The album "Danç-Êh-Sá - Dança dos Herdeiros do Sacrifício" (2006) has as its central theme the rebellions of the black and indigenous populations of Brazil, not very prominent in official history. “We are a black country, we are heirs to the work and culture of this race that formed us”. The cd was chosen, in a popular votation, as the best in MPB in 2007. In 2008, "Estudando a Bossa" was released, the musical thought of a tropicalist who admired bossa nova.</li>
+            <li><strong>2010's - </strong> In 2010, Luaka Bop (New York) launched the box Studies of "Tom Zé – Explaining things so I can confuse you”, lps and cds grouped together with great approval of international critics. In 2012, "Tropicália Lixo Lógico", support of the Natura Musical project, musically defines Tropicalism. In 2014, "Vira lata na Via Láctea", after all this years surprisely the first partnership in a song by Tom Zé and Caetano Veloso.</li>
         </ul>
         <blockquote>
             <p>
                 <em>"Pra viver mais ou menos bem numa grande cidade, precisa inicialmente de três coisas: gravatas, documentos e neuroses".</em>
             </p>
         </blockquote>
-        <h3>If you have time, you should read more about this incredible human being on his <a href="https://pt.wikipedia.org/wiki/Tom_Z%C3%A9" id="tribute-link">Wikipedia entry.</a></h3>
+        <h3>If you have time, you should read more about this incredible human being on his <a href="https://en.wikipedia.org/wiki/Tom_Z%C3%A9" id="tribute-link" target="_blank">Wikipedia entry.</a></h3>
     </section>
     </main>
 
