--- a/Responsive Web Design Projects/#2-Bojack Horseman Form File/index.html
+++ b/Responsive Web Design Projects/#2-Bojack Horseman Form File/index.html
@@ -16,15 +16,15 @@
     <div id="main" class="container">
         <form id="survey-form">
             <div class="form-group">
-                <label id="email-label" for="name">
+                <label id="name-label" for="name">
                     Name <br>
-                    <input id="name" type="text" placeholder="Enter your name" class="form-control">
+                    <input id="name" type="text" placeholder="Enter your name" class="form-control" required>
                 </label>
             </div>
             <div class="form-group">
-                <label id="email.label" for="email">
+                <label id="email-label" for="email">
                     E-mail <br>
-                    <input id="email" type="text" placeholder="Enter your e-mail" class="form-control">
+                    <input id="email" type="text" placeholder="Enter your e-mail" class="form-control" required>
                 </label>
             </div>
             <div class="form-group">
@@ -34,33 +34,33 @@
                 </label>
             </div>
             <div class="form-group">
-                <p id="dropdown-label-1" for="dropdown">
-                Which option best describes your current role?
+                <p>
+                Do you think Bojack is good, deep down?
                 </p>
-                    <select id="dropdown-1" name="current-role" class="form-control">
-                        <option value="Select an option">Select an option</option>
-                        <option value="Working">Working</option>
-                        <option value="Studing">Studing</option>
-                        <option value="Other">Other</option>
+                    <select id="dropdown" name="current-role" class="form-control" required>
+                        <option disabled selected value=>Select an option</option>
+                        <option value="good">Of course, in the end his a good man</option>
+                        <option value="no-deep-down">There's no deep down</option>
                     </select>
             </div>
             <div class="form-group">
-                Would you recommend the TV show Bojack Horseman to a Frind? 
-                <br>
+                <p>Would you recommend the TV show Bojack Horseman to a Frind? </p>
                     <label for="definitly">
-                        <input id="definitly" type="radio" name="recommend">Definitly</input>
+                        <input id="definitly" type="radio" name="recommend" class="input-radio">Definitly, I'm crazy</input>
+                        <br>
                     </label>
                     <label for="maybe">
-                        <input id="maybe" type="radio" name="recommend">Maybe</input>
+                        <input id="maybe" type="radio" name="recommend" class="input-radio">Maybe</input>
+                        <br>
                     </label>
                     <label for="not-really">
-                        <input type="radio" id="not-really" name="recommend">Not really!</input>
+                        <input type="radio" id="not-really" name="recommend" class="input-radio">Not really! There are sufficient depressed people walking the streets</input>
+                        <br>
                     </label>
             </div>
             <div class="form-group">
-                <label for="dropdown-label-2">Which character would you be on the show? </label>
-                <br>
-                        <select id="dropdown-2" name="which-character" class="form-control">
+                <p>Which character would you be on the show? </p>
+                        <select id="dropdown2" name="which-character" class="form-control" required>
                             <br>
                             <option value="Select an option">Select an option</option>
                             <option value="Bojack Horseman">Bojack Horseman</option>
@@ -74,35 +74,40 @@
             </div>
                
                     <div class="form-group">
-                        Which characters do you like? (Check all that apply) 
-                        <br>
+                        <p>Which characters do you like? (Check all that apply) </p>
                             <label for="Bojack">
-                                <input id="bojack" type="checkbox">
+                                <input id="bojack" type="checkbox" name="prefer"
+                                class="input-checkbox">
                                 Bojack
                             </label>
                                 <br>
                             <label for="Todd">
-                                <input id="Todd" type="checkbox">
+                                <input id="Todd" type="checkbox" name="prefer"
+                                class="input-checkbox">
                                 Todd
                             </label>
                                 <br>
                             <label for="Princess Caroline">
-                                <input id="princess-caroline" type="checkbox">
+                                <input id="princess-caroline" type="checkbox" name="prefer"
+                                class="input-checkbox">
                                 Princess Caroline
                             </label>
                                 <br>
                             <label for="Sr. Peanutbutter">
-                                <input id="sr-peanutbutter" type="checkbox">
+                                <input id="sr-peanutbutter" type="checkbox" name="prefer"
+                                class="input-checkbox">
                                 Sr. Peanutbutter
                             </label>
                                 <br>
                             <label for="Diane Nguyen">
-                                <input id="diane-nguyen" type="checkbox">
+                                <input id="diane-nguyen" type="checkbox" name="prefer"
+                                class="input-checkbox">
                                 Diane Nguyen
                             </label>
                                 <br>
                             <label for="Sarah Lynn">
-                                <input id="sarah-lynn" type="checkbox">
+                                <input id="sarah-lynn" type="checkbox" name="prefer"
+                                class="input-checkbox">
                                 Sarah Lynn
                             </label>
                     </div>
@@ -113,11 +118,11 @@
                     Any comments about the show?
                     <br>
                 </label>
-                <textarea name="comments" id="comments" cols="40" rows="10"></textarea>
+                <textarea name="comments" id="comments" cols="40" rows="10" class="form-control"></textarea>
             </div>
             <div class="form-group">
                 <p>
-                    <input id="submit" type="button" value="Submit">
+                    <input id="submit" type="button" value="Submit" class="submit">
                 </p>
             </div>
 
