--- a/Responsive Web Design Projects/#3-Product Landing Page/index.html
+++ b/Responsive Web Design Projects/#3-Product Landing Page/index.html
@@ -5,35 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
     <title>Product Landing</title>
 </head>
 <body>
     <header id="header">
+        <div class="logo"><img id="header-img" src="logo3.png" alt="Company logo"></div>
         <nav id="nav-bar">
-            <img id="header-img" src="" alt="Company logo">
             <h1 id="title">My Product</h1>
-            <div id="pricing" class="nav-link">Pricing</div>
-            <div id="about" class="nav-link">About us</div>
-            <div id="contact" class="nav-link"></div>
+            <ul>
+                <li><a id="pricing" class="nav-link" href="#pricing">Pricing</a></li>
+                <li><a id="about-us" class="nav-link" href="about-us">About us</a></li>
+                <li><a id="contact" class="nav-link" href="#features">Features</a></li>
+            </ul>
         </nav>
     </header>
-    <h2>You will be surprised by our products</h2>
-    <form id="form" action="form">
-            <input id="email" type="email" placeholder="Enter your e-mail">
-            <br>
-            <input id="submit" type="button" value="Get started">
-    </form>
+    <section id="hero">
+        <h2>Handcrafted, home-made masterpieces</h2>
+        <form id="form" action="form" action="https://www.freecodecamp.com/email-submit">
+                <input id="email" type="email" placeholder="Enter your e-mail" required>
+                <br>
+                <input id="submit" type="submit" value="Get started">
+        </form>
+    </section>
     <div id="container-values">
-        <div class="company-values">
-            <img src="" alt="Sophisticated">
-        </div>
-        <div class="company-values">
-            <img src="" alt="Environmental Awareness">
-        </div>
-        <div class="company-values">
-            <img src="" alt="Quality Assurance">
-        </div>
-    </div>
+        <section>
+            <div class="company-values">
+                <div class="icon">
+                    <i class="fa-solid fa-trees"></i>
+                </div>
+                <div class="desc">
+                    <h2>Premium Materials</h2>
+                    <p>Our products use shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+                </div>
+            </div>
+            <div class="company-values">
+                <div class="icon">
+                    <i class="fa-solid fa-trees"></i>
+                </div>
+                <div class="desc">
+                    <h2>Fast Shipping</h2>
+                    <p>We make sure you recieve your trombone as soon as we have finished
+                        making it. We also provide free returns if you are not satisfied.</p>
+                </div>
+            </div>
+            <div class="company-values">
+                <div class="icon">
+                    <i class="fa-solid fa-trees"></i>
+                </div>
+                <div class="desc">
+                    <h2>Quality Assurance</h2>
+                    <p>For every purchase you make, we will ensure there are no damages or
+                        faults and we will check and test the pitch of your instrument.</p>
+                </div>
+            </div>
+        </section>
     <div id="video-id">
         <video id="video" src=""></video>
     </div>
