--- a/Responsive Web Design Projects/#3-Product Landing Page/index.html
+++ b/Responsive Web Design Projects/#3-Product Landing Page/index.html
@@ -5,74 +5,114 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
+    <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+    crossorigin="anonymous"/>
     <title>Product Landing</title>
 </head>
 <body>
-    <header id="header">
-        <div class="logo"><img id="header-img" src="logo3.png" alt="Company logo"></div>
-        <nav id="nav-bar">
-            <h1 id="title">My Product</h1>
-            <ul>
-                <li><a id="pricing" class="nav-link" href="#pricing">Pricing</a></li>
-                <li><a id="about-us" class="nav-link" href="about-us">About us</a></li>
-                <li><a id="contact" class="nav-link" href="#features">Features</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section id="hero">
-        <h2>Handcrafted, home-made masterpieces</h2>
-        <form id="form" action="form" action="https://www.freecodecamp.com/email-submit">
-                <input id="email" type="email" placeholder="Enter your e-mail" required>
-                <br>
-                <input id="submit" type="submit" value="Get started">
-        </form>
-    </section>
-    <div id="container-values">
-        <section>
-            <div class="company-values">
-                <div class="icon">
-                    <i class="fa-solid fa-trees"></i>
+    <div id="page-wrapper">
+    
+            <header id="header">
+                <div class="logo">
+                    <i class="far fa-lightbulb fa-4x"></i>
+                    <h1 id="title">My Product</h1>
                 </div>
-                <div class="desc">
-                    <h2>Premium Materials</h2>
-                    <p>Our products use shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+                <nav id="nav-bar">
+                    <ul>
+                        <li><a id="pricing" class="nav-link" href="#pricing">Pricing</a></li>
+                        <li><a id="about-us" class="nav-link" href="about-us">About us</a></li>
+                        <li><a id="contact" class="nav-link" href="#features">Features</a></li>
+                    </ul>
+                </nav>
+            </header>
+        <section id="info">
+            <h2>Handcrafted, home-made masterpieces</h2>
+            <form id="form" action="https://www.freecodecamp.com/email-submit">
+                    <input id="email" type="email" placeholder="Enter your e-mail" required>
+                    <br>
+                    <input id="submit" type="submit" value="Get started">
+            </form>
+        </section>
+        <div id="container-values">
+            <section id="features">
+                <div class="company-values">
+                    <div class="icon">
+                        <i class="fas fa-tree fa-3x"></i>
+                    </div>
+                    <div class="desc">
+                        <h2>Premium Materials</h2>
+                        <p>Our products use shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+                    </div>
                 </div>
+                <div class="company-values">
+                    <div class="icon">
+                        <i class="fa-solid fa-trees"></i>
+                    </div>
+                    <div class="desc">
+                        <h2>Fast Shipping</h2>
+                        <p>We make sure you recieve your trombone as soon as we have finished
+                            making it. We also provide free returns if you are not satisfied.</p>
+                    </div>
+                </div>
+                <div class="company-values">
+                    <div class="icon">
+                        <i class="fa-solid fa-trees"></i>
+                    </div>
+                    <div class="desc">
+                        <h2>Quality Assurance</h2>
+                        <p>For every purchase you make, we will ensure there are no damages or
+                            faults and we will check and test the pitch of your instrument.</p>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <section id="how-it-works">
+            <iframe src="https://www.youtube.com/embed/b4qMka1WJIs" width="560" height="315" frameborder="0" allowfullscreen></iframe>
+        </section>
+        <section id="pricing">
+            <div class="product" id="produc-1">
+                <h2 class="procuct-titles">Product 1</h2>
+                <h3>500$</h3>
+                <ol>
+                    <li>Lorem ipsum</li>
+                    <li>Lorem ipsum</li>
+                    <li>Lorem ipsum</li>
+                </ol>
+                <button class="btn">Select</button>
             </div>
-            <div class="company-values">
-                <div class="icon">
-                    <i class="fa-solid fa-trees"></i>
-                </div>
-                <div class="desc">
-                    <h2>Fast Shipping</h2>
-                    <p>We make sure you recieve your trombone as soon as we have finished
-                        making it. We also provide free returns if you are not satisfied.</p>
-                </div>
+            <div class="product" id="product-2">
+                <h2 class="procuct-titles">Product 2</h2>
+                <h3>800$</h3>
+                <ol>
+                    <li>Lorem ipsum</li>
+                    <li>Lorem ipsum</li>
+                    <li>Lorem ipsum</li>
+                </ol>
+                <button class="btn">Select</button>
             </div>
-            <div class="company-values">
-                <div class="icon">
-                    <i class="fa-solid fa-trees"></i>
-                </div>
-                <div class="desc">
-                    <h2>Quality Assurance</h2>
-                    <p>For every purchase you make, we will ensure there are no damages or
-                        faults and we will check and test the pitch of your instrument.</p>
-                </div>
+            <div class="product" id="product-3">
+                <h2 class="procuct-titles">Product 3</h2>
+                <h3>1100$</h3>
+                <ol>
+                    <li>Lorem ipsum</li>
+                    <li>Lorem ipsum</li>
+                    <li>Lorem ipsum</li>
+                </ol>
+                <button class="btn">Select</button>
             </div>
         </section>
-    <div id="video-id">
-        <video id="video" src=""></video>
+        <footer>
+                <div class="footer-nav"><a href="#">Privacy</a></div>
+                <div class="footer-nav"><a href="#">Terms</a></div>
+                <div class="footer-nav"><a href="#">Contact</a></div>
+            <p>Copyrigth 2021</p>
+        </footer>
     </div>
-    <div id="container-pricing-info">
-        <div class="product-prices"></div>
-        <div class="product-prices"></div>
-        <div class="product-prices"></div>
-    </div>
-    <footer>
-        <div class="footer-nav">Privacy</div>
-        <div class="footer-nav">Terms</div>
-        <div class="footer-nav">Contact</div>
-        <p>Copyrigth 2021</p>
-    </footer>
 </body>
 </html>
+
+
+
