Product Landing Page - Fourth commit

--- a/Responsive Web Design Projects/#3-Product Landing Page/index.html
+++ b/Responsive Web Design Projects/#3-Product Landing Page/index.html
@@ -16,8 +16,8 @@
     <div id="page-wrapper">
     
             <header id="header">
-                <div class="logo">
-                    <i class="far fa-lightbulb fa-4x"></i>
+                <div id="logo">
+                    <i class="far fa-lightbulb fa-3x"></i>
                     <h1 id="title">My Product</h1>
                 </div>
                 <nav id="nav-bar">
