Product Landing Page - Fifth commit

--- a/Responsive Web Design Projects/#3-Product Landing Page/index.html
+++ b/Responsive Web Design Projects/#3-Product Landing Page/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <nav id="nav-bar">
                     <ul>
-                        <li><a id="pricing" class="nav-link" href="#pricing">Pricing</a></li>
+                        <li><a id="pricing-nav" class="nav-link" href="#pricing">Pricing</a></li>
                         <li><a id="about-us" class="nav-link" href="about-us">About us</a></li>
                         <li><a id="contact" class="nav-link" href="#features">Features</a></li>
                     </ul>
@@ -33,14 +33,14 @@
             <form id="form" action="https://www.freecodecamp.com/email-submit">
                     <input id="email" type="email" placeholder="Enter your e-mail" required>
                     <br>
-                    <input id="submit" type="submit" value="Get started">
+                    <input id="submit" class="btn" type="submit" value="Get started">
             </form>
         </section>
         <div id="container-values">
             <section id="features">
                 <div class="company-values">
                     <div class="icon">
-                        <i class="fas fa-tree fa-3x"></i>
+                        <i class="fas fa-rocket fa-3x"></i>
                     </div>
                     <div class="desc">
                         <h2>Premium Materials</h2>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="company-values">
                     <div class="icon">
-                        <i class="fa-solid fa-trees"></i>
+                        <i class="fas fa-shipping-fast fa-3x"></i>
                     </div>
                     <div class="desc">
                         <h2>Fast Shipping</h2>
@@ -59,20 +59,19 @@
                 </div>
                 <div class="company-values">
                     <div class="icon">
-                        <i class="fa-solid fa-trees"></i>
+                        <i class="fas fa-tree fa-3x"></i>
                     </div>
                     <div class="desc">
-                        <h2>Quality Assurance</h2>
-                        <p>For every purchase you make, we will ensure there are no damages or
-                            faults and we will check and test the pitch of your instrument.</p>
+                        <h2>Environmental Conscience</h2>
+                        <p>For a better future for you and me, we Think Sustainability!</p>
                     </div>
                 </div>
             </section>
         </div>
-        <section id="how-it-works">
+        <section id="about-us">
             <iframe src="https://www.youtube.com/embed/b4qMka1WJIs" width="560" height="315" frameborder="0" allowfullscreen></iframe>
         </section>
-        <section id="pricing">
+        <section id="pricing-section">
             <div class="product" id="produc-1">
                 <h2 class="procuct-titles">Product 1</h2>
                 <h3>500$</h3>
@@ -105,10 +104,13 @@
             </div>
         </section>
         <footer>
-                <div class="footer-nav"><a href="#">Privacy</a></div>
-                <div class="footer-nav"><a href="#">Terms</a></div>
-                <div class="footer-nav"><a href="#">Contact</a></div>
-            <p>Copyrigth 2021</p>
+                <ul>
+                    <li class="footer-nav"><a href="#">Privacy</a></li>
+                    <li class="footer-nav"><a href="#">Terms</a></li>
+                    <li class="footer-nav"><a href="#">Contact</a></li>
+                </ul>
+                <span>My Product, Copyrigth 2021</span>
+            
         </footer>
     </div>
 </body>
