Product Landing Page - Sixth commit

--- a/Responsive Web Design Projects/#3-Product Landing Page/index.html
+++ b/Responsive Web Design Projects/#3-Product Landing Page/index.html
@@ -22,16 +22,17 @@
                 </div>
                 <nav id="nav-bar">
                     <ul>
-                        <li><a id="pricing-nav" class="nav-link" href="#pricing">Pricing</a></li>
-                        <li><a id="about-us" class="nav-link" href="about-us">About us</a></li>
+                        <li><a id="pricing-nav" class="nav-link" href="#pricing-section">Pricing</a></li>
+                        <li><a id="about-us" class="nav-link" href="#about-us">About us</a></li>
                         <li><a id="contact" class="nav-link" href="#features">Features</a></li>
                     </ul>
                 </nav>
+                <img src="xxx" id="header-img" alt="">
             </header>
         <section id="info">
             <h2>Handcrafted, home-made masterpieces</h2>
             <form id="form" action="https://www.freecodecamp.com/email-submit">
-                    <input id="email" type="email" placeholder="Enter your e-mail" required>
+                    <input name="email" id="email" type="email" placeholder="Enter your e-mail" required>
                     <br>
                     <input id="submit" class="btn" type="submit" value="Get started">
             </form>
@@ -69,7 +70,7 @@
             </section>
         </div>
         <section id="about-us">
-            <iframe src="https://www.youtube.com/embed/b4qMka1WJIs" width="560" height="315" frameborder="0" allowfullscreen></iframe>
+            <iframe id="video" src="https://www.youtube.com/embed/b4qMka1WJIs" width="560" height="315" frameborder="0" allowfullscreen></iframe>
         </section>
         <section id="pricing-section">
             <div class="product" id="produc-1">
