Personal Portfolio Page - Second commit

--- a/Responsive Web Design Projects/#5-Personal Portfolio Page/index.html
+++ b/Responsive Web Design Projects/#5-Personal Portfolio Page/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <nav id="navbar">
-        <ul>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
+        <ul id="navlist">
+            <li><a href="#welcome-section">About</a></li>
             <li><a href="">Work</a></li>
+            <li><a href="">Contact</a></li>
         </ul>
     </nav>
     <section id="welcome-section">
@@ -20,15 +20,22 @@
         <p>A web developer</p>
     </section>
     <section id="projects">
-        <div id="project-tile"></div>
-        <div id="project-tile"></div>
-        <div id="project-tile"></div>
+        <div class="container">
+            <div class="project-file"></div>
+            <div class="project-file"></div>
+            <div class="project-file"></div>
+        </div>
     </section>
-    <h2>Let's work together</h2>
-    <p>Text</p>
-    <a href="" class="profile-links" id="profile-link"></a>
-    <a href="" class="profile-links"></a>
-    <a href="" class="profile-links"></a>
-    <a href="" class="profile-links"></a>
+    <section id="contact">
+        <h2>Let's work together</h2>
+        <p>Text</p>
+        
+            <div id="social-links">
+                <a href="" class="profile-links" id="profile-link"></a>
+                <a href="" class="profile-links"></a>
+                <a href="" class="profile-links"></a>
+                <a href="" class="profile-links"></a>
+            </div>
+    </section>
 </body>
 </html>
