--- a/Responsive Web Design Projects/#5-Personal Portfolio Page/index.html
+++ b/Responsive Web Design Projects/#5-Personal Portfolio Page/index.html
@@ -10,23 +10,27 @@
 <body>
     <nav id="navbar">
         <ul id="navlist">
-            <li><a href="#welcome-section">About</a></li>
-            <li><a href="">Work</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a class="links" href="#welcome-section">About</a></li>
+            <li><a class="links" href="">Work</a></li>
+            <li><a class="links" href="">Contact</a></li>
         </ul>
     </nav>
     <section id="welcome-section">
-        <h1>Welcome to Hugo Fabris Portfolio Page</h1>
-        <p>A web developer</p>
+        <div id="info">
+            <h1>Welcome to Hugo Fabris Portfolio Page</h1>
+            <p>A web developer</p>
+        </div>
     </section>
     <section id="projects">
+        <h2 id="projects-header">These are some of my projects</h2>
         <div class="container">
+            lalala
             <div class="project-file"></div>
             <div class="project-file"></div>
             <div class="project-file"></div>
         </div>
     </section>
-    <section id="contact">
+    <footer id="contact">
         <h2>Let's work together</h2>
         <p>Text</p>
         
@@ -36,6 +40,6 @@
                 <a href="" class="profile-links"></a>
                 <a href="" class="profile-links"></a>
             </div>
-    </section>
+    </footer>
 </body>
 </html>
