Personal Portfolio Page - Fifth commit

--- a/Responsive Web Design Projects/#5-Personal Portfolio Page/index.html
+++ b/Responsive Web Design Projects/#5-Personal Portfolio Page/index.html
@@ -5,14 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+    crossorigin="anonymous"/>
     <title>Document</title>
 </head>
 <body>
     <nav id="navbar">
         <ul id="navlist">
             <li><a class="links" href="#welcome-section">About</a></li>
-            <li><a class="links" href="">Work</a></li>
-            <li><a class="links" href="">Contact</a></li>
+            <li><a class="links" href="#projects">Work</a></li>
+            <li><a class="links" href="#contact">Contact</a></li>
         </ul>
     </nav>
     <section id="welcome-section">
@@ -22,7 +27,7 @@
         </div>
     </section>
     <section id="projects">
-        <h2 id="projects-header">These are some of my projects</h2>
+        <h2 class="projects-header">These are some of my projects</h2>
         <div class="container">
             <a class="project-file" href="https://codepen.io/hugomfabris/full/XWRXZXK" target="_blank">
             <img class="project-image" src="https://64.media.tumblr.com/3f7f9f3702c4b3ef2e779441f5f2529a/9efe51a673d6f7f3-5e/s2048x3072/a1c51e5eb85e8703bee66584beb0777ec3c45361.png" alt="Tom Zé, singer and composer.">
@@ -53,14 +58,21 @@
         </div>
     </section>
     <footer id="contact">
-        <h2>Let's work together</h2>
-        <p>Text</p>
         
             <div id="social-links">
-                <a href="" class="profile-links" id="profile-link"></a>
-                <a href="" class="profile-links"></a>
-                <a href="" class="profile-links"></a>
-                <a href="" class="profile-links"></a>
+                <a href="https://www.facebook.com/hugo.fabris.9" class="profile-links" target="_blanck" >
+                    <i class="fab fa-facebook-square"></i>
+                    Facebook
+                </a>
+                <a href="https://github.com/hugomfabris" class="profile-links" target="_blanck" >
+                        <i class="fab fa-github"></i>
+                        Github
+                </a>
+                <a href="https://twitter.com/hugomfabris" class="profile-links" target="_blanck" >
+                    <i class="fab fa-twitter"></i>
+                        Twitter
+                </a>
+
             </div>
     </footer>
 </body>
