Personal Portfolio Page - Sixth commit

--- a/Responsive Web Design Projects/#5-Personal Portfolio Page/index.html
+++ b/Responsive Web Design Projects/#5-Personal Portfolio Page/index.html
@@ -29,27 +29,27 @@
     <section id="projects">
         <h2 class="projects-header">These are some of my projects</h2>
         <div class="container">
-            <a class="project-file" href="https://codepen.io/hugomfabris/full/XWRXZXK" target="_blank">
+            <a class="project-tile" href="https://codepen.io/hugomfabris/full/XWRXZXK" target="_blank">
             <img class="project-image" src="https://64.media.tumblr.com/3f7f9f3702c4b3ef2e779441f5f2529a/9efe51a673d6f7f3-5e/s2048x3072/a1c51e5eb85e8703bee66584beb0777ec3c45361.png" alt="Tom Zé, singer and composer.">
             <p class="project-title">Tribute Page</p>
             </a>
-            <a class="project-file" href="https://codepen.io/hugomfabris/full/jOmVeyZ" target="_blank">
+            <a class="project-tile" href="https://codepen.io/hugomfabris/full/jOmVeyZ" target="_blank">
                 <img class="project-image" src="https://64.media.tumblr.com/fe2b8fa87584d182cdbdab4f2d7ad5cb/7e94cd595d617161-21/s2048x3072/5e44ed768c14d0202b3fa81045d557b9821e384b.png" alt="Bojack Horseman Form">
                 <p class="project-title">Bojack Horseman Form</p>
             </a>
-            <a class="project-file" href="https://codepen.io/hugomfabris/full/mdmmmzy" target="_blank">
+            <a class="project-tile" href="https://codepen.io/hugomfabris/full/mdmmmzy" target="_blank">
                 <img class="project-image" src="https://64.media.tumblr.com/368135c681504b04962e34bee85b88fd/b5a1410134f5f66d-04/s2048x3072/5b8b1d502d12ef33cf1055db42bab88c3e9f53ff.png" alt="Product Landing Page">
                 <p class="project-title">Product Landing Page</p>
             </a>
-            <a class="project-file" href="https://codepen.io/hugomfabris/full/gOWEqeL" target="_blank">
+            <a class="project-tile" href="https://codepen.io/hugomfabris/full/gOWEqeL" target="_blank">
                 <img class="project-image" src="https://64.media.tumblr.com/e46881442ec33cec14c410eca1412df3/ba42b7f57e3d40f8-3f/s2048x3072/ef0ed497ed39f0255eebf1511561dba0df29e2b4.png" alt="Random Fox Generator">
                 <p class="project-title">Random Fox Generator</p>
             </a>
-            <a class="project-file" href="https://codepen.io/hugomfabris/full/oNWQaYY" target="_blank">
+            <a class="project-tile" href="https://codepen.io/hugomfabris/full/oNWQaYY" target="_blank">
                 <img class="project-image" src="https://64.media.tumblr.com/71d34ac993903fd1d7731249133558d8/a0520f48b42cbf25-78/s2048x3072/81e399a4448424a4e91e295ed5a7b0126b3997f0.png" alt="React Documentation Page">
                 <p class="project-title"></p>
             </a>
-            <a class="project-file" href="" target="_blank">
+            <a class="project-tile" href="" target="_blank">
                 <img class="project-image" src="" alt="">
                 <p class="project-title"></p>
             </a>
@@ -60,15 +60,15 @@
     <footer id="contact">
         
             <div id="social-links">
-                <a href="https://www.facebook.com/hugo.fabris.9" class="profile-links" target="_blanck" >
+                <a href="https://www.facebook.com/hugo.fabris.9" target="_blanck" >
                     <i class="fab fa-facebook-square"></i>
                     Facebook
                 </a>
-                <a href="https://github.com/hugomfabris" class="profile-links" target="_blanck" >
+                <a href="https://github.com/hugomfabris" id="profile-link" target="_blanck" >
                         <i class="fab fa-github"></i>
                         Github
                 </a>
-                <a href="https://twitter.com/hugomfabris" class="profile-links" target="_blanck" >
+                <a href="https://twitter.com/hugomfabris"  target="_blanck" >
                     <i class="fab fa-twitter"></i>
                         Twitter
                 </a>
